fixed overflow problem

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -241,9 +241,7 @@
 
 @media screen and (max-width: 700px) {
 
-    .header {
-        overflow: none;
-    }
+
 
 
     .btn-mobile-nav {
@@ -252,34 +250,22 @@
     }
 
     .navigation {
-        background-color: rgb(255, 255, 255, 0.97);
-        position: absolute;
+        background-color: rgba(255, 255, 255, 0.97);
+        position: fixed;
         top: 0;
-        left: 0;
+        right: -100%;
         width: 100%;
         height: 100vh;
-
-        transform: translateX(100%);
-
         display: flex;
         align-items: center;
         justify-content: center;
-
-        transition: all 0.5s ease-in;
-
-        /* Hide */
-        /* opacity: 0; */
-        opacity: none;
-        pointer-events: none;
-        visibility: hidden;
+        transition: right 0.5s ease-in-out;
     }
 
     .nav-open .navigation {
-        opacity: 1;
-        pointer-events: auto;
-        visibility: visible;
-        transform: translateX(0);
+        right: 0;
     }
+
 
 
     .nav-open .icon-mobile-nav[name="close-outline"] {
